Closed Bug 1980513 Opened 8 months ago Closed 2 months ago

New wpt failures in /css/css-view-transitions/finished-promise-defers-cleanup.html

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
149 Branch
Tracking Status
firefox149 --- fixed

People

(Reporter: wpt-sync, Assigned: emilio)

References

(Depends on 1 open bug)

Details

(Whiteboard: [wpt], [wptsync upstream])

Attachments

(1 file)

Syncing wpt PR 54083 found new untriaged test failures in CI

Tests Affected

New Tests That Don't Pass

CI Results

Gecko CI (Treeherder)
GitHub PR Head

Notes

These updates will be on mozilla-central once bug 1980502 lands.

Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.

This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/

If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.

Severity: -- → S3
Duplicate of this bug: 2017604

Note that the spec edits for
https://github.com/w3c/csswg-drafts/issues/12116 haven't happened yet,
but it's simple enough.

finished-promise-defers-cleanup.html was broken in multiple ways:

  • It assumed that if there's no active transition position would be
    static, and such, which is just wrong. Safari agrees with us here,
    you generally can query random non-existent pseudo-element styles
    like ::first-line.

  • There's a nicer way of doing this now that we expose
    document.activeViewTransition so test that too.

  • Test that the ::view-transition pseudo is displayed by checking
    used-value properties like width, which depend on whether the
    pseudo-element actually exists.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/be658e33f37f https://hg.mozilla.org/integration/autoland/rev/01d76fffc640 Defer view-transition finished promise resolution as per CSSWG resolution. r=view-transitions-reviewers,boris
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/57888 for changes under testing/web-platform/tests
Whiteboard: [wpt] → [wpt], [wptsync upstream]
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 149 Branch
QA Whiteboard: [qa-triage-done-c150/b149]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: