Bug 1980513 - Defer view-transition finished promise resolution as per CSSWG resolution. r=view-transitions-reviewers,boris

Note that the spec edits for
https://github.com/w3c/csswg-drafts/issues/12442 haven't happened yet,
but it's simple enough.

finished-promise-defers-cleanup.html was broken in multiple ways:

 * It assumed that if there's no active transition position would be
   static, and such, which is just wrong. Safari agrees with us here,
   you generally can query random non-existent pseudo-element styles
   like ::first-line.

 * There's a nicer way of doing this now that we expose
   `document.activeViewTransition` so test that too.

 * Test that the `::view-transition` pseudo is displayed by checking
   used-value properties like `width`, which depend on whether the
   pseudo-element actually exists.

Differential Revision: https://phabricator.services.mozilla.com/D283884